kubernetes/quay/components/cnpg-clair/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-app
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              quay-component: clair-app
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-cluster
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              cnpg.io/cluster: clair
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              cnpg.io/cluster: clair
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-webhook
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 9443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-api-server
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
          podSelector:
            matchLabels:
              app: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-dns
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 5353
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-monitoring
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 9187
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-pgdump-ingress
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-cnpg-operator
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clair-pgadmin
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/pgadmin: pgadmin
      ports:
        - protocol: TCP
          port: 5432
